k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapamensal
  labels:
    app: mapamensal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mapamensal
  template:
    metadata:
      labels:
        app: mapamensal
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: mapamensal
          image: ghcr.io/samirmedeiros-com/mapamensal:latest
          ports:
            - containerPort: 8080
