k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mapamensal
spec:
  type: NodePort
  selector:
    app: mapamensal
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30081
